--- a/CHANGELOG
+++ b/CHANGELOG
@@ -501,3 +501,9 @@
 26.03.2016, Matthias Koch, Mecrisp-Stellaris 2.2.3
 
   - New target: Silicon Labs Happy Gecko Starter Kit with EFM32HG322F64
+
+28.03.2016, Matthias Koch, Mecrisp-Stellaris 2.2.4
+
+  - No line break directly after the "Redefine..." message anymore
+  - Graphics driver for Sharp LCD on Happy Gecko
+  - New target: KL46Z256 on Freescale Freedom FRDM-KL46Z board
