--- a/CHANGELOG
+++ b/CHANGELOG
@@ -628,3 +628,7 @@
 
   - Bugfix for all multiplications involving double numbers on M0 targets. Only ud* was fine.
   - Added hook-find and (find) to RA cores
+
+09.08.2017, Matthias Koch, Mecrisp-Stellaris 2.3.9
+
+  - Bugfix for d< d> du< du>
