--- a/CHANGELOG
+++ b/CHANGELOG
@@ -632,3 +632,10 @@
 09.08.2017, Matthias Koch, Mecrisp-Stellaris 2.3.9
 
   - Bugfix for d< d> du< du>
+
+03.09.2017, Matthias Koch, Mecrisp-Stellaris 2.3.9a
+
+  - Contribution by Manfred Mahlow:
+      Vocabularies and classes for Mecrisp-Stellaris RA
+      on targets which allow separate 16 bit writes into flash memory
+      which includes all TI, Silabs and STM32F... chips.
